chore(gradle): [CHK-4223] remove preview flags