@@ -126,10 +126,7 @@ tasks.create("applySemanticVersionPlugin") {
   apply(plugin = "com.dipien.semantic-version")
 }
 
-tasks.withType(JavaCompile::class.java).configureEach {
-  options.encoding = "UTF-8"
-  options.compilerArgs.add("--enable-preview")
-}
+tasks.withType(JavaCompile::class.java).configureEach { options.encoding = "UTF-8" }
 
 tasks.withType(Javadoc::class.java).configureEach { options.encoding = "UTF-8" }
 
@@ -263,7 +260,6 @@ tasks.named<Jar>("jar") { enabled = false }
 tasks.test {
   useJUnitPlatform()
   finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
-  jvmArgs(listOf("--enable-preview"))
 }
 
 tasks.jacocoTestReport {
